# clarity-dashboard

./: .gitignore  Cargo.toml  Containerfile  config.toml.example
.github/workflows/: release.yml
pages/: index.html
src/: config.rs  main.rs
src/routes/: mod.rs  pages.rs  proxy.rs
